test/pass/basic_syntax/nested_for_loop.lly
var v = [[0, 0, 0], [0, 0, 0], [0, 0, 0]]

for i in 0...2: {
    for j in 0...2: {
        v[i][j] = 1
    }
}

if v != [[1, 1, 1], [1, 1, 1], [1, 1, 1]]:
    stderr.print("Failed.")
