test/fail/enums_and_variants/wrong_arg_count_variant.lly
#[
SyntaxError: Wrong number of arguments to Some (2 for 1).
    from wrong_arg_count_variant.lly:6:
]#

var v = Some(1, 2)
